# Price-Tag-Master

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.bat  compile_commands.json
.cache/clangd/index/: configmanager.h.AC4A05B85A63E8BC.idx  excelgenerator.h.25A3A878A58134A3.idx  excelparser.h.2990A768BFF607E9.idx  mainwindow.h.2D154E6DF259BDF5.idx  pricetag.h.9177DE5119738A7A.idx  tagtemplate.h.D5A0D089C092B91E.idx  templateeditor.h.80E77AA23C4E9AA9.idx  templateeditordialog.h.CD5C73CC02C7FE53.idx  thememanager.h.D398AC20283315C0.idx  wordgenerator.h.0C4AF0D7BB79CD34.idx  xlsxabstractooxmlfile.h.20BC7C6232A70A89.idx  xlsxabstractsheet.h.8A182D070586DA18.idx  xlsxcell.h.822CD5D151D136A7.idx  xlsxcelllocation.h.32C0B86457C5273D.idx  xlsxcellrange.h.47C2E3C9C106F38B.idx  xlsxcellreference.h.21C2CED077F68A97.idx  xlsxdocument.h.72A9462942C0E2FF.idx  xlsxformat.h.B712DA9BE19A9CC7.idx  xlsxglobal.h.308C45FB9FB52E09.idx  xlsxworksheet.h.96AB3D24F3C968FC.idx  xlsxzipwriter_p.h.8A22760BDEF2BE20.idx
docs/: API программы.txt  CR.md  ExcelAPI.txt  Implementation.md  PRD.md  ProjectTitleByCurrentCR_Implementation.md  TestOutPut.xlsx  UI_UX_doc.md  project_structure.md  Для тесту!.xlsx  Формат входных данных.xlsx  ебучие ценники 19.11.24.xlsx  счет 11 07 25.xls  ценники Fabretti 20.01.24.xlsx
docs/DesignPreview/: Figma_Spec_LightDark.md  Figma_Tokens_LightDark.json  index.html
docs/DesignScrins/: time_comparison_chart.html  time_comparison_perfect.html
docs/OtherHelpfulFiles/: FABReTTI(1).xlsx  TestНареальномПримере.xlsx  Для красивой обложки.xlsx  Для тесту!.xlsx  ебучие ценники 19.11.24.xlsx
docs/WorkflowLogs/: BugLog.md  DevelopmentLog.md  UserInteractionLog.md
include/: Common.h  CommonIncludes.h  Constants.h  configmanager.h  excelgenerator.h  excelparser.h  mainwindow.h  pricetag.h  tagtemplate.h  templateeditor.h  templateeditordialog.h  thememanager.h  wordgenerator.h
include/ConfigsManager/: configmanager.h
include/ExcelGeneration/: ExcelFormats.h  ExcelGenerator.h  ExcelLayout.h  ExcelRenderer.h  ExcelUtils.h  ExcelWriters.h
include/ExcelParsing/: ExcelParser.h
include/Models/: pricetag.h
include/UI/: mainwindow.h  pixmaputils.h  tagtemplate.h  templateeditor.h  templateeditordialog.h  thememanager.h  trimmedhittoolbutton.h
include/WordGeneration/: WordGenerator.h
resources/: resources.qrc
resources/windows/: app_icon.rc
src/: configmanager.cpp  excelgenerator.cpp  excelparser.cpp  main.cpp  mainwindow.cpp  pricetag.cpp  templateeditor.cpp  templateeditordialog.cpp  thememanager.cpp  wordgenerator.cpp
src/ConfigsManager/: configmanager.cpp
src/ExcelGeneration/: ExcelFormats.cpp  ExcelGenerator.cpp  ExcelLayout.cpp  ExcelRenderer.cpp  ExcelUtils.cpp  ExcelWriters.cpp
src/ExcelParsing/: ExcelParser.cpp
src/Models/: pricetag.cpp
src/TemplateEditor/: TemplateEditorDialog.cpp  TemplateEditor_Facade.cpp  TemplateEditor_Interactions.cpp  TemplateEditor_Localization.cpp  TemplateEditor_Renderer.cpp  TemplateEditor_Ui.cpp
src/UI/: MainWindow.cpp  PixmapUtils.cpp  ThemeManager.cpp  TrimmedHitToolButton.cpp  tagtemplate.cpp
src/WordGeneration/: WordGenerator.cpp
styles/: DrunkDogStyle.clang-format
